src/objects/Daily_Digest__c.object
<CustomObject>
    <description>Daily Digest</description>
    <fields>
        <fullName>Execute_Time__c</fullName>
        <description>The time at which to send the email</description>
        <inlineHelpText>Daily Digest execute time</inlineHelpText>
        <label>Execute Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Daily Digest Type</description>
        <inlineHelpText>Daily Digest Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Wins</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Daily Digest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Execute_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Daily Digest #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Digests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>